--- a/app/src/main/res/anim/show_feed.xml
+++ b/app/src/main/res/anim/show_feed.xml
@@ -12,4 +12,11 @@
         android:fromYDelta="100%"
         android:toYDelta="-100%">
     </translate>
+    <alpha
+        android:startOffset="1000"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:duration="200"
+        android:fromAlpha="1.0"
+        android:interpolator="@android:anim/accelerate_interpolator"
+        android:toAlpha="0.0" />
 </set>
