--- a/app/src/main/res/layout/activity_drum.xml
+++ b/app/src/main/res/layout/activity_drum.xml
@@ -11,72 +11,90 @@
         android:layout_gravity="center">
 
         <ImageButton
-            android:layout_marginTop="150dp"
-            android:layout_marginLeft="233dp"
+            android:layout_marginTop="142dp"
+            android:layout_marginLeft="183dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="20dp"
             android:id="@+id/kick"
             android:layout_width="168dp"
             android:layout_height="176dp"
             android:background="@drawable/s_drum_kick"/>
 
         <ImageButton
-            android:layout_marginTop="164dp"
-            android:layout_marginLeft="153dp"
+            android:layout_marginTop="156dp"
+            android:layout_marginLeft="103dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="20dp"
             android:id="@+id/snare"
             android:layout_width="102dp"
             android:layout_height="106dp"
             android:background="@drawable/s_drum_snare"/>
 
         <ImageButton
-            android:layout_marginTop="200dp"
-            android:layout_marginLeft="70dp"
+            android:layout_marginTop="192dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="20dp"
             android:id="@+id/hihat_open"
             android:layout_width="78dp"
             android:layout_height="78dp"
             android:background="@drawable/s_drum_hihat_open"/>
 
         <ImageButton
-            android:layout_marginTop="151dp"
-            android:layout_marginLeft="90dp"
+            android:layout_marginTop="143dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="20dp"
             android:id="@+id/hihat"
             android:layout_width="78dp"
             android:layout_height="78dp"
             android:background="@drawable/s_drum_hihat"/>
 
         <ImageButton
-            android:layout_marginTop="101dp"
-            android:layout_marginLeft="206dp"
+            android:layout_marginTop="93dp"
+            android:layout_marginLeft="156dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="20dp"
             android:id="@+id/tomSmall"
             android:layout_width="82dp"
             android:layout_height="86dp"
             android:background="@drawable/s_drum_tom_small"/>
 
         <ImageButton
-            android:layout_marginTop="74dp"
-            android:layout_marginLeft="282dp"
+            android:layout_marginTop="66dp"
+            android:layout_marginLeft="232dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="20dp"
             android:id="@+id/tomMiddle"
             android:layout_width="98dp"
             android:layout_height="100dp"
             android:background="@drawable/s_drum_tom_middle"/>
 
         <ImageButton
-            android:layout_marginTop="176dp"
-            android:layout_marginLeft="396dp"
+            android:layout_marginTop="168dp"
+            android:layout_marginLeft="346dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="20dp"
             android:id="@+id/tomFloor"
             android:layout_width="144dp"
             android:layout_height="148dp"
             android:background="@drawable/s_drum_tom_floor"/>
 
         <ImageButton
-            android:layout_marginTop="56dp"
-            android:layout_marginLeft="98dp"
+            android:layout_marginTop="48dp"
+            android:layout_marginLeft="48dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="20dp"
             android:id="@+id/crash16"
             android:layout_width="116dp"
             android:layout_height="116dp"
             android:background="@drawable/s_drum_crash16"/>
 
         <ImageButton
-            android:layout_marginTop="28dp"
-            android:layout_marginLeft="360dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="310dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="20dp"
             android:id="@+id/crash18"
             android:layout_width="134dp"
             android:layout_height="134dp"
@@ -84,7 +102,9 @@
 
         <ImageButton
             android:layout_marginTop="58dp"
-            android:layout_marginLeft="456dp"
+            android:layout_marginLeft="406dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="20dp"
             android:id="@+id/ride"
             android:layout_width="172dp"
             android:layout_height="172dp"
