--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -8,8 +8,11 @@
         android:id="@+id/titleLogo"
         android:layout_marginTop="128dp"
         android:layout_gravity="center"
-        android:layout_width="146dp"
-        android:layout_height="72dp"
+        android:layout_width="match_parent"
+        android:layout_marginLeft="120dp"
+        android:layout_marginRight="120dp"
+        android:scaleType="fitCenter"
+        android:layout_height="wrap_content"
         android:background="@null"
         android:src="@drawable/intro_logo" />
 
