--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -185,7 +185,7 @@
     <style name="testBtnColorStyle">
         <item name="android:layout_height">70dp</item>
         <item name="android:layout_width">70dp</item>
-        <item name="android:layout_marginRight">10dp</item>
+        <item name="android:layout_margin">10dp</item>
     </style>
 
     <style name="testScoreTextStyle">
